====================
2018/8/17 - 2018/10/16
v 6-0.52

- Now on branch Feldspar.
- Changed " != REAL_NULL " to "notNull" usages.
- Changed nomenclature:
-- ObjectBool is now BoolObject
-- ObjectString is now StringObject
-- ObjectInteger is now IntegerObject
-- ObjectDecimal is now DecimalNumObject
-- FunctionContainer is now FunctionObject
-- ObjectList is now ListObject
- Created NumericObject parent class, inheriting Object.
-- Added enum value ObjectType::Numeric.
-- Changed IntegerObject to inherit NumericObject.
-- Changed DecimalObject to inherit NumericObject.
- Implemented NumericObject interface for IntegerObject. (Ported basicmath.cpp extension.)
- Implemented NumericObject interface for DecimalNumObject. (Ported basicmath.cpp extension.)
- Added system functions for numeric operations: _equal, _greater_than, _greater_or_equal, _abs, _add, _subtract, _multiply, _divide, modulus, incr, and decr and implemented processing functions for them in the Engine.
- Added String::steal().
- Changed isObjectFunction() to isFunctionObject.
- Changed isObjectEmptyFunction() to isEmptyFunctionObject.
- Changed Engine::process_sys_are_number() to use isNumericObject().
- Added argument support to the engine along with helper method Engine::addForeignFunctionArgsToStackFrame().
- Changed Engine::runFunctionObject to also set the lastObject before running.
- Fixed ~CallbackWrapper() to disown callback in destructor.
- Added Engine::getLastObject().
- Fixed bugs in Engine::process_sys_func_all() and Engine::process_sys_func_any() that had the conditional belonging to the other method.
- Fixed null pointer in system support for numeric operations Engine::process_sys_num_chain_num and Engine::process_sys_solo_num.
- Removed class RandomNullByteInStream and usage.
- Added debugging tool ability to Engine to print body tokens while parsing. Extends Logger interface.
- Added LogMessage.